apps/hello-world/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-route53"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: hello-world-basic-auth@kubernetescrd
spec:
  tls:
    - hosts:
        - dev.homelab.sawyy.com
      secretName: dev-homelab-tls # Cert-manager créera ce secret tout seul
  rules:
    - host: dev.homelab.sawyy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-svc
                port:
                  number: 80
